--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -3,27 +3,42 @@
 
     <h2 class="text-2xl">Datos Generales</h2>
 
-    <form class="my-6">
+    <form [formGroup]="myForm" class="my-6">
 
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-1/2 ">
           <mat-label>CURP: </mat-label>
-          <input matInput>
+          <input formControlName="curp" matInput>
+          @if( isValidField('curp') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("curp") }}
+            </mat-error>
+          }
         </mat-form-field>
         <mat-form-field class="basis-1/2 ">
           <mat-label>Modalidad</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
+          <mat-select formControlName="modalidad" [(ngModel)]="selectedValue" name="food">
             @for (food of foods; track food) {
             <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
             }
           </mat-select>
+          @if( isValidField('modalidad') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("modalidad") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
 
       <div class="flex flex-row">
         <mat-form-field class="basis-full">
           <mat-label>Nombre Completo: </mat-label>
-          <input matInput>
+          <input matInput formControlName="nombreCompleto">
+          @if( isValidField('nombreCompleto') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("nombreCompleto") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
 
@@ -31,59 +46,80 @@
         <mat-form-field class="basis-1/2">
           <mat-label>Telefono</mat-label>
           <span matTextPrefix>+52 &nbsp;</span>
-          <input type="tel" matInput placeholder="333-555-1234">
+          <input type="tel" matInput formControlName="telefono" placeholder="333-555-1234">
           <mat-icon matSuffix>mode_edit</mat-icon>
+          @if( isValidField('telefono') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("telefono") }}
+            </mat-error>
+          }
         </mat-form-field>
 
         <mat-form-field class="basis-1/2">
           <mat-label>Correo Electronico</mat-label>
-          <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+          <input type="email" matInput formControlName="email"
             placeholder="Ej. usuario@ejemplo.com">
-          <!-- <mat-hint>Errors appear instantly!</mat-hint> -->
-          @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
-          <mat-error>Por favor introduce un correo electronico valido</mat-error>
-          }
-          @if (emailFormControl.hasError('required')) {
-          <mat-error>Correo Electronico es <strong>requerido</strong></mat-error>
-          }
+            @if( isValidField('email') ) {
+              <mat-error class="text-red-500">
+                {{ getFieldError("email") }}
+              </mat-error>
+            }
         </mat-form-field>
       </div>
 
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-1/3 ">
           <mat-label>Estado</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
-            @for (food of foods; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-            }
+          <mat-select formControlName="estado" [(ngModel)]="selectedValue" name="estado">
+            <mat-option *ngFor="let estado of estados" [value]="estado.estado">{{ estado }}</mat-option>
           </mat-select>
+          @if( isValidField('estado') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("estado") }}
+            </mat-error>
+          }
         </mat-form-field>
         <mat-form-field class="basis-1/3 ">
           <mat-label>Municipio</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
+          <mat-select formControlName="municipio" [(ngModel)]="selectedValue" name="food">
             @for (food of foods; track food) {
             <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
             }
           </mat-select>
+          @if( isValidField('municipio') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("municipio") }}
+            </mat-error>
+          }
         </mat-form-field>
         <mat-form-field class="basis-1/3 ">
           <mat-label>Codigo Postal</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
+          <mat-select formControlName="codigoPostal" [(ngModel)]="selectedValue" name="food">
             @for (food of foods; track food) {
             <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
             }
           </mat-select>
+          @if( isValidField('codigoPostal') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("codigoPostal") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
 
       <div class="flex flex-row">
         <mat-form-field class="basis-full ">
           <mat-label>Colonia</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
+          <mat-select formControlName="Colonia" [(ngModel)]="selectedValue" name="food">
             @for (food of foods; track food) {
             <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
             }
           </mat-select>
+          @if( isValidField('Colonia') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("Colonia") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
 
@@ -91,21 +127,35 @@
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-1/2">
           <mat-label>Tipo Zona</mat-label>
-          <input matInput>
+          <input matInput formControlName="tipoZona">
+          @if( isValidField('tipoZona') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("tipoZona") }}
+            </mat-error>
+          }
         </mat-form-field>
         <mat-form-field class="basis-1/2">
           <mat-label>Tipo Asentamiento</mat-label>
-          <input matInput>
+          <input matInput formControlName="tipoAsentamiento">
+          @if( isValidField('tipoAsentamiento') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("tipoAsentamiento") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
 
       <div class="flex flex-row">
         <mat-form-field class="basis-full">
           <mat-label>Domicilio: </mat-label>
-          <input matInput>
+          <input matInput formControlName="domicilio">
+          @if( isValidField('domicilio') ) {
+            <mat-error class="text-red-500">
+              {{ getFieldError("domicilio") }}
+            </mat-error>
+          }
         </mat-form-field>
       </div>
-
 
     </form>
 
