--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,10 @@
 <div class="pt-5 mb-10 h-screen max-w-[64rem] container mx-auto">
-
   <div class="flex flex-row gap-4">
     <div class="basis-6/8 ">
-      <datosGeneralesComponent/>
+      <datosGeneralesComponent #datosForm />
     </div>
     <div class="basis-2/8">
-      <fotoComponent />
+      <fotoComponent [datosGeneralesComponent]="datosForm" (submitForm)="submitDatosForm()" />
     </div>
   </div>
 </div>
