--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -6,21 +6,19 @@
     <form [formGroup]="myForm" class="my-6">
 
       <div class="flex flex-row gap-2">
+
         <mat-form-field class="basis-1/2 ">
           <mat-label>CURP: </mat-label>
-          <input formControlName="curp" matInput>
-          @if( isValidField('curp') ) {
-          <mat-error class="text-red-500">
+          <input formControlName="curp" matInput maxlength="18" (input)="toUpperCaseCurp($event)">
+          <mat-error *ngIf="isValidField('curp')" class="text-red-500">
             {{ getFieldError("curp") }}
           </mat-error>
-          }
         </mat-form-field>
+
         <mat-form-field class="basis-1/2 ">
           <mat-label>Modalidad</mat-label>
-          <mat-select formControlName="modalidad" [(ngModel)]="selectedValue" name="food">
-            @for (food of foods; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-            }
+          <mat-select formControlName="modalidad" [(ngModel)]="selectedValue">
+            <mat-option *ngFor="let modalidad of modalidades" [value]="modalidad">{{modalidad}}</mat-option>
           </mat-select>
           @if( isValidField('modalidad') ) {
           <mat-error class="text-red-500">
@@ -33,16 +31,14 @@
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-2/3">
           <mat-label>Nombre Completo: </mat-label>
-          <input matInput formControlName="nombreCompleto">
-          @if( isValidField('nombreCompleto') ) {
-          <mat-error class="text-red-500">
+          <input matInput formControlName="nombreCompleto" maxlength="200" (input)="toUpperCaseName($event)">
+          <mat-error *ngIf="isValidField('nombreCompleto')" class="text-red-500">
             {{ getFieldError("nombreCompleto") }}
           </mat-error>
-          }
         </mat-form-field>
         <mat-form-field class="basis-1/3">
           <mat-label>Fecha de nacimiento</mat-label>
-          <input matInput [matDatepicker]="picker">
+          <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento">
           <mat-hint>DD/MM/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker ></mat-datepicker>
@@ -53,7 +49,7 @@
         <mat-form-field class="basis-1/2">
           <mat-label>Telefono</mat-label>
           <span matTextPrefix>+52 &nbsp;</span>
-          <input type="tel" matInput formControlName="telefono" placeholder="333-555-1234">
+          <input type="tel" matInput formControlName="telefono" placeholder="333-555-1234" maxlength="10">
           <mat-icon matSuffix>mode_edit</mat-icon>
           @if( isValidField('telefono') ) {
           <mat-error class="text-red-500">
@@ -94,16 +90,12 @@
 
         <mat-form-field class="basis-1/3">
           <mat-label>Código Postal</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="cp">
-            @for (cp of codigosPostales; track cp) {
-            <mat-option [value]="cp.cp">{{cp.cp}}</mat-option>
-            }
+          <mat-select formControlName="codigoPostal" (selectionChange)="getColoniasByCP()">
+            <mat-option *ngFor="let cp of codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
           </mat-select>
-          @if( isValidField('codigoPostal') ) {
-          <mat-error class="text-red-500">
+          <mat-error *ngIf="isValidField('codigoPostal')" class="text-red-500">
             {{ getFieldError("codigoPostal") }}
           </mat-error>
-          }
         </mat-form-field>
 
       </div>
@@ -111,17 +103,12 @@
       <div class="flex flex-row">
         <mat-form-field class="basis-full ">
           <mat-label>Colonia</mat-label>
-          <mat-select formControlName="Colonia" [(ngModel)]="selectedValue" name="food">
-            <!-- @for (colonia of colonias; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-            } -->
-            <mat-option *ngFor="let colonia of colonias" [value]="colonia">{{ colonia }}</mat-option>
+          <mat-select formControlName="Colonia" (selectionChange)="onColoniaChange($event.value)">
+            <mat-option *ngFor="let colonia of colonias" [value]="colonia.colonia">{{ colonia.colonia }}</mat-option>
           </mat-select>
-          @if( isValidField('Colonia') ) {
-          <mat-error class="text-red-500">
+          <mat-error *ngIf="isValidField('Colonia')" class="text-red-500">
             {{ getFieldError("Colonia") }}
           </mat-error>
-          }
         </mat-form-field>
       </div>
 
@@ -129,11 +116,11 @@
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-1/2">
           <mat-label>Tipo Asentamiento</mat-label>
-          <input matInput disabled value="" >
+          <input matInput [value]="tipoAsentamiento" formControlName="tipoAsentamiento">
         </mat-form-field>
         <mat-form-field class="basis-1/2">
           <mat-label>Tipo Zona</mat-label>
-          <input matInput disabled value="" >
+          <input matInput [value]="tipoZona" formControlName="tipoZona">
         </mat-form-field>
       </div>
 
@@ -151,7 +138,7 @@
       <div class="flex flex-row">
         <mat-form-field class="basis-full">
           <mat-label>Comentarios y/o observaciones: </mat-label>
-          <input matInput formControlName="domicilio">
+          <input matInput formControlName="cometarios">
           @if( isValidField('domicilio') ) {
           <mat-error class="text-red-500">
             {{ getFieldError("domicilio") }}
