--- a/src/app/pages/consulta/dialog-aspirante-beneficio.html
+++ b/src/app/pages/consulta/dialog-aspirante-beneficio.html
@@ -12,16 +12,23 @@
   </div>
 
   <!-- Sección de la tabla -->
-  <div class="flex-1 overflow-x-auto self-center">
+  <div class="flex-1 overflow-x-auto self-center mt-3">
     <table class="min-w-full bg-white rounded-lg shadow-md">
       <tbody>
+        <tr class="border-b">
+          <td class="py-2 px-4 font-semibold">Credencializado</td>
+          <td class="py-2 px-4">
+            <mat-slide-toggle class="example-margin" [checked]="aspiranteBeneficio?.credencializado == 1" [disabled]="false" (change)="editAspiranteCredencializado($event)">
+            </mat-slide-toggle>
+          </td>
+        </tr>
         <tr class="border-b">
           <td class="py-2 px-4 font-semibold">ID</td>
           <td class="py-2 px-4">{{ aspiranteBeneficio?.id }}</td>
         </tr>
         <tr class="border-b">
           <td class="py-2 px-4 font-semibold">Modalidad</td>
-          <td class="py-2 px-4">{{ aspiranteBeneficio?.id_modalidad }}</td>
+          <td class="py-2 px-4">{{ aspiranteBeneficio?.nombre_modalidad }}</td>
         </tr>
         <tr class="border-b">
           <td class="py-2 px-4 font-semibold">CURP</td>
@@ -80,7 +87,11 @@
           <td class="py-2 px-4">{{ aspiranteBeneficio?.com_obs || 'Sin observaciones' }}</td>
         </tr>
         <tr class="border-b">
-          <td class="py-2 px-4 font-semibold">Fecha del Evento</td>
+          <td class="py-2 px-4 font-semibold">Cajero</td>
+          <td class="py-2 px-4">{{ aspiranteBeneficio?.email_cajero }}</td>
+        </tr>
+        <tr class="border-b">
+          <td class="py-2 px-4 font-semibold">Fecha Registro</td>
           <td class="py-2 px-4">{{ aspiranteBeneficio?.fecha_evento | date:'dd/MM/yyyy' }}</td>
         </tr>
       </tbody>
