--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use "tailwindcss";
 
 
-html, body { height: 100%; }
+html, body { min-height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 :root {
