--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -44,6 +44,15 @@
           </mat-select>
         </mat-form-field>
 
+        <mat-form-field>
+          <mat-label>Credencializado</mat-label>
+          <mat-select formControlName="credencializado">
+            <mat-option value="">- Selecciona una opción -</mat-option>
+            <mat-option value="1">Credencializado</mat-option>
+            <mat-option value="0">Pendiente</mat-option>
+          </mat-select>
+        </mat-form-field>
+
         <mat-form-field class="w-100">
           <mat-label>Buscar</mat-label>
           <input matInput formControlName="search" placeholder="Buscar..." (keyup.enter)="getAspirantesBeneficio()">
@@ -95,6 +104,24 @@
     <ng-template #loaded>
       <div class="table-container mat-elevation-z8" style="background-color: white;">
         <table mat-table [dataSource]="dataSource" matSort>
+
+          <!-- Credencializado -->
+          <ng-container matColumnDef="credencializado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              <mat-icon aria-hidden="false" aria-label="Credencializado"
+                fontIcon="credit_card">Credencializado</mat-icon>
+            </th>
+            <td mat-cell *matCellDef="let row">
+              <ng-container *ngIf="row.credencializado == 1; else pendiente">
+                <mat-icon aria-hidden="false" aria-label="Credencializado" style="color: orange;"
+                  fontIcon="credit_score">Credencializado</mat-icon>
+              </ng-container>
+              <ng-template #pendiente>
+                <mat-icon aria-hidden="false" aria-label="Pendiente de credencializar" style="color: darkslategrey;"
+                  fontIcon="credit_card_off">Pendiente</mat-icon>
+              </ng-template>
+            </td>
+          </ng-container>
 
           <!-- CURP -->
           <ng-container matColumnDef="curp">
@@ -207,7 +234,7 @@
 
                 <button mat-button (click)="openDialog(row.id)" color="primary">Ver más</button>
                 @if (permisoAcciones) {
-                  <button mat-button color="primary" [routerLink]="['/inicio/editar/', row.id]" >Editar</button>
+                <button mat-button color="primary" [routerLink]="['/inicio/editar/', row.id]">Editar</button>
                 <button mat-button (click)="deleteAspiranteBeneficio(row.id)" color="accent">Eliminar</button>
                 }
               </div>
