--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -23,6 +23,8 @@
         <div class="w-[255px] aspect-square bg-gray-100 rounded-lg overflow-hidden ">
           @if (capturedImage) {
           <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
+          } @else if (imgFoto()) {
+          <img [src]="imgFoto()" alt="Captured photo" class="w-full h-full object-cover">
           } @else {
           <div class="w-full h-full flex items-center justify-center text-gray-400">
             Foto no capturada
@@ -73,17 +75,31 @@
 
       <!-- Register button -->
       @if(!datosGeneralesComponent.editar) {
-        <button (click)="onSubmit()" [disabled]="!capturedImage"
-          class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12h12" /><path d="M11 8l4 4l-4 4" /><path d="M12 21a9 9 0 0 0 0 -18" /></svg>
-          Registrar
-        </button>
+      <button (click)="onSubmit()" [disabled]="!capturedImage"
+        class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M3 12h12" />
+          <path d="M11 8l4 4l-4 4" />
+          <path d="M12 21a9 9 0 0 0 0 -18" />
+        </svg>
+        Registrar
+      </button>
       } @else{
-        <button (click)="onEdit()" [disabled]="!capturedImage"
-          class="rounded-full w-3/4 flex flex-col items-center justify-center bg-rose-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-edit"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" /><path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" /><path d="M16 5l3 3" /></svg>
-          Editar
-        </button>
+      <button (click)="onEdit()" 
+        class="rounded-full w-3/4 flex flex-col items-center justify-center bg-rose-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-edit">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+          <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+          <path d="M16 5l3 3" />
+        </svg>
+        Editar
+      </button>
       }
 
     </div>
