--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -8,7 +8,7 @@
       <div x-show="open" click.away="open = false"
         class="mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 px-2 py-2 *:text-end">
 
-        <a (click)="menuShow = false" routerLink="/inicio/checador-asistencia" routerLinkActive="bg-[#f26507]/50"
+        <a (click)="menuShow = false" routerLink="/inicio/asistencia" routerLinkActive="bg-[#f26507]/50"
             class="block px-4 py-2 text-lg text-gray-700 hover:bg-gray-100 rounded-md font-bold flex gap-3 justify-around">
             <svg  xmlns="http://www.w3.org/2000/svg"  width="32"  height="32"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-clock-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M20.942 13.021a9 9 0 1 0 -9.407 7.967" /><path d="M12 7v5l3 3" /><path d="M15 19l2 2l4 -4" /></svg>
           Asistencia
